Add some line spacing between Akregator's feed list rows, so that the site favicons do not run into each other.  Particularly noticeable in this application, because many sites' favicons are square with no margin.

Do this via an item delegate (SubscriptionListDelegate) so that the model need
not concern itself with the intended list appearance.  To follow this principle,
also move the unread articles => bold font setting to the delegate.  Add a new
data role HasUnreadRole so that the delegate can fetch this information from
the model.

BUG:178821

svn path=/trunk/KDE/kdepim/akregator/; revision=964725